# Dev-Tools

./: DISCLAIMER.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: access.rs  lib.rs  logger.rs  process_manager.rs  types.rs
src-tauri/src/mysql/: cleaner.rs  detector.rs  mod.rs  password_reset.rs  uninstaller.rs
src-tauri/src/python/: detector.rs  env_manager.rs  mirror_manager.rs  mod.rs  package_manager.rs  version_fetcher.rs
src/components/: ErrorDisplay.vue  MySqlTool.vue  PythonTool.vue
src/components/icons/: index.js
src/components/ui/: Button.vue  DetailItem.vue  FormHeader.vue  Icon.vue  InstanceCard.vue  Modal.vue  ProgressBar.vue  SectionHeader.vue  index.css
src/composables/: useConfig.js  useErrorHandler.js
src/stores/: app.js  mysql.js  python.js
